cluster_config/conifg/back-end/backend-servicea.yaml
apiVersion: v1
kind: Service
metadata:
  name: servera
  labels:
    app: servera
    service: servera
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: servera
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: servera-v1
  labels:
    app: servera
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: servera
        version: v1
    spec:
      nodeSelector:
        servera: "yes"
      containers:
      - name: servera
        image: developer/server-a
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1"
          requests:
            cpu: "0.4"
            memory: "512Mi"
