cluster_config/conifg/back-end/backend-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: servera
spec:
  host: servera
  subsets:
  - name: v1
    labels:
      version: v1
