cluster_config/conifg/back-end/servera-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servera
spec:
  hosts:
  - servera
  http:
  - route:
    - destination:
        host: servera
        subset: v1
---
